Reworded error messages Log all request URIs at debug level Moved non-generated classes out of io.swagger package tree Replaced ServiceMethod with standard Supplier Added uncaught exception handler. Regenerated APIs with Java 8 options, some of which we don't want. Fixed duplicated context path. Expanded ReadMe.md file
