# src/main/java/io/swagger/model/CustomerOrderDto.java
@@ -1,19 +1,28 @@
 package io.swagger.model;
 
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import io.swagger.model.MenuItemDto;
+import io.swagger.model.MenuItemOptionDto;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import javax.validation.Valid;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import io.swagger.annotations.ApiModelProperty;
 import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
 /**
  * CustomerOrderDto
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-10-05T10:50:14.597Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-09-14T10:11:39.090Z")
+
+
+@JsonInclude(JsonInclude.Include.NON_NULL)
 
 public class CustomerOrderDto   {
   @JsonProperty("menuItem")
@@ -40,7 +49,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Get menuItem
    * @return menuItem
   **/
@@ -69,7 +78,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Get options
    * @return options
   **/
@@ -90,7 +99,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Order complete
    * @return complete
   **/
@@ -110,7 +119,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Get id
    * @return id
   **/
@@ -130,7 +139,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Get orderTime
    * @return orderTime
   **/
@@ -151,7 +160,7 @@ public class CustomerOrderDto   {
     return this;
   }
 
-   /**
+  /**
    * Get completeTime
    * @return completeTime
   **/
@@ -169,7 +178,7 @@ public class CustomerOrderDto   {
 
 
   @Override
-  public boolean equals(Object o) {
+  public boolean equals(java.lang.Object o) {
     if (this == o) {
       return true;
     }
@@ -209,7 +218,7 @@ public class CustomerOrderDto   {
    * Convert the given object to string with each line indented by 4 spaces
    * (except the first line).
    */
-  private String toIndentedString(Object o) {
+  private String toIndentedString(java.lang.Object o) {
     if (o == null) {
       return "null";
     }
